css/covercustom.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
	color: #fff;
}


/**************************
  DEFAULT BOOTSTRAP STYLES
**************************/

.btn {
	display: inline-block;
	padding: 6px 12px;
	margin-bottom: 0;
	font-size: 14px;
	font-weight: normal;
	line-height: 1.42857143;
	text-align: center;
	white-space: nowrap;
	vertical-align: middle;
	cursor: pointer;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	background-image: none;
	border: 1px solid transparent;
	border-radius: 4px;
	padding: 10px 16px;
}

.btn-lg {
	font-size: 18px;
	line-height: 1.33;
	border-radius: 6px;
}

.btn-primary {
	color: #fff;
	background-color: transparent;
	border-color: white;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
	color: #fff;
	background-color: transparent;
	border-color: white;
}

/*
 * Base structure
 */

html,
body {
	height: 100%;
	background-color: #284271;
}
body {
	color: #fff;
	text-align: center;
	text-shadow: 0 1px 3px rgba(0,0,0,.5);
	font-size: 18px;
}

/* font modifications **/
.h1, h1 {
  font-size: 64px;
}
.h1 {
  margin-top: 20px;
  margin-bottom: 10px;
}
.h1, .h3, h1, h3 {
	font-family: inherit;
	font-weight: 300;
	line-height: 1.5;
	color: inherit;
}

.p {
	font-size: 18px;
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
	display: table;
	width: 100%;
	height: 100%; /* For at least Firefox */
	min-height: 100%;
	-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
	box-shadow: inset 0 0 100px rgba(0,0,0,.5);
}
.site-wrapper-inner {
	display: table-cell;
	vertical-align: top;
	background: url(../images/CloudCover.jpg) no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}
.cover-container {
	margin-right: auto;
	margin-left: auto;
}

/* Padding for spacing */
.inner {
	padding: 30px;
}


/*
 * Header
 */
.masthead-brand {
	font-size: 20px;
	margin-top: 10px;
	margin-bottom: 10px;
}

.masthead-nav > li {
	display: inline-block;
}
.masthead-nav > li + li {
	margin-left: 20px;
}
.masthead-nav > li > a {
	padding-right: 0;
	padding-left: 0;
	font-size: 16px;
	font-weight: bold;
	color: #fff; /* IE8 proofing */
	color: rgba(255,255,255,.75);
	border-bottom: 2px solid transparent;
}
.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
	background-color: transparent;
	border-bottom-color: #a9a9a9;
	border-bottom-color: rgba(255,255,255,.25);
}
.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
	color: #fff;
	border-bottom-color: #fff;
}

@media (min-width: 768px) {
	.masthead-brand {
		float: left;
	}
	.masthead-nav {
		float: right;
	}
	.lead {
		font-size: 34px;
}


/*
 * Cover
 */

.cover {
	padding: 0 20px;
}
.cover .btn-lg {
	padding: 10px 20px;

}

/*
 * Flexbox
 *
.container {
	position: fixed;
	display: flex;
	align-items: flex-start;
	justify-content: center;
	flex-direction: row; */
}


/* MARKETING CONTENT
-------------------------------------------------- */

/* Center align the text within the three columns below the carousel */
.container-marketing {
	position: relative;
	margin-right: auto;
	margin-left: auto;
	padding-top: 30px;
}
.marketing .col-lg-4 {
	margin-bottom: 20px;
	text-align: center;
}
.marketing h2 {
	font-weight: normal;
}
/*.marketing .col-lg-4 p {*/
	/*margin-right: 10px;*/
	/*margin-left: 10px;*/
/*}*/
/*
 * Footer
 */

.mastfoot {
	color: #284271;
	text-shadow: none;/* IE8 proofing */
	text-align: center;
}
/*.container-mastfoot {*/
	/*position: fixed;*/
	/*margin-right: auto;*/
	/*margin-left: auto;*/
	/*padding-top: 30px;*/
/*}*/
/*.mastfoot .col-lg-4 {*/
	/*margin-bottom: 0px;*/
	/*text-align: left;*/
/*}*/
/*.mastfoot h3 {*/
	/*font-weight: normal;*/


/*
 * Affix and center
 */

@media (min-width: 768px) {
	/* Pull out the header and footer */
	.masthead {
		position: fixed;
		top: 0;
	}
	.masthead-brand {
		font-size: 24px;
	}

	.mastfoot {
		position: fixed;
		bottom: 0;
	}
	}
	/* Start the vertical centering */
	.site-wrapper-inner {
		vertical-align: middle;
	}
	/* Handle the widths */
	.masthead,
	.mastfoot,
	.cover-container {
		width: 100%; /* Must be percentage or pixels for horizontal alignment */
	}
}

@media (min-width: 992px) {
	.masthead,
	.mastfoot,
	.cover-container {
		width: 700px;
	}

}

